@@ -1,3 +1,9 @@
+2009-01-20 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
+
+	* httpAdapter.c
+	[ 2390533 ] Memory leak in httpAdapter.c
+	(patch from John Powell)
+
 2009-01-30 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
 
 	* configure.ac test/Makefile.am test/finaltest/Makefile.am
